some minor changes related to licensing
some minor changes related to licensing

--- a/GUI/drs4scopedlg.ui
+++ b/GUI/drs4scopedlg.ui
@@ -9272,6 +9272,10 @@ border-color: black;
      <string>About</string>
     </property>
     <addaction name="actionInfo"/>
+    <addaction name="separator"/>
+    <addaction name="actionLicense_GPLv3"/>
+    <addaction name="actionLicense_LGPLv3"/>
+    <addaction name="actionUsed_License_GPLv3"/>
    </widget>
    <widget class="QMenu" name="menuCalculator">
     <property name="title">
@@ -9453,6 +9457,31 @@ border-color: black;
   <action name="actionStop_True_False_Pulse_Streaming">
    <property name="text">
     <string>Stop (True/False) Pulse Streaming...</string>
+   </property>
+  </action>
+  <action name="actionCopyright">
+   <property name="text">
+    <string>Copyright</string>
+   </property>
+  </action>
+  <action name="actionModifications">
+   <property name="text">
+    <string>Modifications</string>
+   </property>
+  </action>
+  <action name="actionLicense_GPLv3">
+   <property name="text">
+    <string>License-GPLv3</string>
+   </property>
+  </action>
+  <action name="actionLicense_LGPLv3">
+   <property name="text">
+    <string>License-LGPLv3</string>
+   </property>
+  </action>
+  <action name="actionUsed_License_GPLv3">
+   <property name="text">
+    <string>Used License-GPLv3</string>
    </property>
   </action>
  </widget>
