--- a/GUI/drs4scriptdlg.ui
+++ b/GUI/drs4scriptdlg.ui
@@ -162,6 +162,7 @@ border-color: black;
      </property>
      <addaction name="actionLoad_Settings_File_and_Save_after_Counts"/>
      <addaction name="actionWarming_Up_DRS4_Board_and_Start_Measurement"/>
+     <addaction name="actionIn_situ_measurement"/>
     </widget>
     <widget class="QMenu" name="menuPulse_Stream">
      <property name="title">
@@ -351,12 +352,12 @@ border-color: black;
   </action>
   <action name="actionLoad_Settings_File_and_Save_after_Counts">
    <property name="text">
-    <string>Loading a Settings-File and save Spectra after Counts</string>
+    <string>save spectrum</string>
    </property>
   </action>
   <action name="actionOptimize_FWHM_by_CFD_Levels">
    <property name="text">
-    <string>Loading a Pulse-Stream</string>
+    <string>loading a pulse-stream</string>
    </property>
   </action>
   <action name="actionSave_Log_Succeed">
@@ -384,12 +385,17 @@ border-color: black;
   </action>
   <action name="actionWarming_Up_DRS4_Board_and_Start_Measurement">
    <property name="text">
-    <string>Warming Up the DRS4-Board and start Measurement</string>
+    <string>warming up</string>
    </property>
   </action>
   <action name="actionLoading_a_Simulation_Input_File">
    <property name="text">
     <string>Loading a Simulation-Input File</string>
+   </property>
+  </action>
+  <action name="actionIn_situ_measurement">
+   <property name="text">
+    <string>in-situ measurement</string>
    </property>
   </action>
  </widget>
