new baseline method, new PHS representation, ...
- new baseline correction method added (fixed and dynamic)
- PHS tab updated: PHS related to events which only contribute to the lifetime spectra can be viewed
- mean trace of the pulse area upon amplitude can be viewed in the graph

--- a/GUI/drs4cfdalgorithmdlg.ui
+++ b/GUI/drs4cfdalgorithmdlg.ui
@@ -108,7 +108,7 @@
                  <string notr="true">color: blue</string>
                 </property>
                 <property name="text">
-                 <string>Nth Order Polynomial Interpolation</string>
+                 <string>Polynomial Interpolation</string>
                 </property>
                </widget>
               </item>
